# lnrpc/routerrpc/router_backend.go
@@ -232,11 +232,39 @@ func (r *RouterBackend) QueryRoutes(ctx context.Context,
 		return nil, err
 	}
 
+	// Calculate route success probability. Do not rely on a probability
+	// that could have been returned from path finding, because mission
+	// control may have been disabled in the provided ProbabilitySource.
+	successProb := r.getSuccessProbability(route)
+
 	routeResp := &lnrpc.QueryRoutesResponse{
-		Routes: []*lnrpc.Route{rpcRoute},
+		Routes:      []*lnrpc.Route{rpcRoute},
+		SuccessProb: successProb,
 	}
 
 	return routeResp, nil
+}
+
+// getSuccessProbability returns the success probability for the given route
+// based on the current state of mission control.
+func (r *RouterBackend) getSuccessProbability(rt *route.Route) float64 {
+	fromNode := rt.SourcePubKey
+	amtToFwd := rt.TotalAmount
+	successProb := 1.0
+	for _, hop := range rt.Hops {
+		toNode := hop.PubKeyBytes
+
+		probability := r.MissionControl.GetProbability(
+			fromNode, toNode, amtToFwd,
+		)
+
+		successProb *= probability
+
+		amtToFwd = hop.AmtToForward
+		fromNode = toNode
+	}
+
+	return successProb
 }
 
 // rpcEdgeToPair looks up the provided channel and returns the channel endpoints
